# ivs2-calculator

./: .editorconfig  .gitignore  .gitmodules  README.md  hodnoceni.txt  skutecnost.txt
mockup/: layout.glade
plan/: xborov08_xkrejc84_xlozrt00_xmitre07_plan.txt
profiling/: zprava.txt
src/: CMakeLists.txt  Doxyfile  Makefile  ratulator.desktop
src/cmake/: Install.cmake  Package.cmake
src/inc/: addContainer.hpp  addNode.hpp  binaryNode.hpp  calculator.hpp  calculatorWindow.hpp  entryNode.hpp  iEvaluable.hpp  rootNode.hpp
src/res/: layout-3.glade  layout.glade  ratulator.cmb  ratulator.glade  ratulator.glade~  ratulator.ui  resources.xml
src/scripts/: postinst
src/src/: addNode.cpp  binaryNode.cpp  calculator.cpp  calculatorWindow.cpp  entryNode.cpp  rootNode.cpp
